smithy-model/src/test/resources/software/amazon/smithy/model/loader/invalid/trait-targets/traits-on-metadata.smithy
// Parse error at line 4, column 1 near `deprecated`: Traits cannot be applied to `metadata`
namespace com.foo

@deprecated
metadata foo = bar
